# Automated-Python-Docstring-Generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  main.py  pyproject.toml
.github/workflows/: ci.yml
samples/: bad.py  calculator.py  demo_math.py  empty_functions.py  good_example.py  math.py  math_utils.py  sample_code.py  strings.py  test_commit.py
src/: cli.py  config.py  coverage.py  generator.py  injector.py  llm_generator.py  parser.py  pep257_fixer.py  quality.py
src/autodocstring/: __main__.py  cli.py  compliance.py  coverage.py  generator.py  injector.py  parser.py  pydoc_report.py
src/autodocstring_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_parser.py
